Direct initialization not working for Quaternion and Point -> Quaternion(x, y, z, w) and Point(x, y, z) [ros/utils.py]
Node.get_clock().now() alternative for rclpy.Time [nodes/state_estimator.py]